--- a/package.json
+++ b/package.json
@@ -16,8 +16,12 @@
 	},
 	"dependencies": {
 		"@prisma/client": "^6.4.1",
+		"@radix-ui/react-dialog": "^1.1.6",
+		"@radix-ui/react-dropdown-menu": "^2.1.6",
 		"@radix-ui/react-label": "^2.1.2",
+		"@radix-ui/react-separator": "^1.1.2",
 		"@radix-ui/react-slot": "^1.1.2",
+		"@radix-ui/react-tooltip": "^1.1.8",
 		"bcryptjs": "^3.0.2",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
