--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
 		"db:migrate": "prisma migrate dev",
 		"db:studio": "prisma studio",
 		"db:push": "prisma db push",
-		"db:migrate:prod": "prisma migrate deploy",
+		"db:deploy": "prisma migrate deploy",
 		"db:seed": "prisma db seed"
 	},
 	"dependencies": {
